[package]
name = "pythnet-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
aws-arn = "0.3.1"
aws-config = { version = "1.8.0", features = ["behavior-version-latest"] }
aws-sdk-kms = "1.76.0"
borsh = "0.9.3"
clap = { version = "4.5.39", features = ["derive", "env"] }
futures = "0.3.31"
der = { version = "0.7.10", features = ["oid", "derive"] }
hex = { version = "0.4.3", features = ["serde"] }
prost = "0.14.1"
reqwest = { version = "0.12.19", features = ["json"] }
secp256k1 = { version = "0.30.0", features = ["recovery", "rand"] }
sequoia-openpgp = "2.0.0"
serde = "1.0.219"
serde_wormhole = "0.1.0"
sha3 = "0.10.8"
solana-account-decoder = "2.2.7"
solana-client = "2.2.7"
solana-sdk = "2.2.2"
tokio = "1.45.1"
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
wormhole-vaas-serde = "0.1.0"

[dev-dependencies]
serde_json = "1.0.140"
base64 = "0.22.1"
