[package]
name = "pythnet-watcher"
version = "1.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
aws-arn = "0.3.1"
aws-config = { version = "1.8.0", features = ["behavior-version-latest"] }
aws-sdk-kms = "1.76.0"
borsh = "0.9.3"
clap = { version = "4.5.39", features = ["derive", "env"] }
futures = "0.3.31"
der = { version = "0.7.10", features = ["oid", "derive"] }
hex = { version = "0.4.3", features = ["serde"] }
prost = "0.14.1"
reqwest = { version = "0.12.19", features = ["json"] }
secp256k1 = { version = "0.30.0", features = ["recovery", "rand"] }
sequoia-openpgp = "2.0.0"
serde = "1.0.219"
serde_wormhole = "0.1.0"
sha3 = "0.10.8"
solana-account-decoder = "2.2.7"
solana-client = "2.2.7"
solana-sdk = "2.2.2"
tokio = "1.45.1"
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
wormhole-vaas-serde = "0.1.0"
axum = "0.8.4"
metrics = "0.24.2"
lazy_static = "1.5.0"
axum-prometheus = "0.9.0"

[dev-dependencies]
serde_json = "1.0.140"
base64 = "0.22.1"
mockall = "0.13.1"

[profile.release]
overflow-checks = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
# See https://github.com/pyth-network/pyth-crosschain/blob/main/doc/rust-code-guidelines.md

wildcard_dependencies = "deny"

collapsible_if = "allow"
collapsible_else_if = "allow"

allow_attributes_without_reason = "warn"

# Panics
expect_used = "warn"
fallible_impl_from = "warn"
indexing_slicing = "warn"
panic = "warn"
panic_in_result_fn = "warn"
string_slice = "warn"
todo = "warn"
unchecked_duration_subtraction = "warn"
unreachable = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"

# Correctness
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
collection_is_never_read = "warn"
match_wild_err_arm = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
same_name_method = "warn"
suspicious_operation_groupings = "warn"
suspicious_xor_used_as_pow = "warn"
unused_self = "warn"
used_underscore_binding = "warn"
while_float = "warn"
